Fix incorrect magnific-popup.js paths in HTML files

--- a/Concrete-masonry.html
+++ b/Concrete-masonry.html
@@ -731,7 +731,7 @@
 <script src="assets/js/vendor/marker.js"></script>
 <script src="assets/js/vendor/map-content.js"></script>
 <script src="assets/js/vendor/info-box.js"></script>
-<script src="../golfy/assets/js/plugins/magnific-popup.js"></script>
+<script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
 
 <script src="assets/js/plugins/contact.form.js"></script>
 
