Add missing magnific-popup script to about.html

--- a/about.html
+++ b/about.html
@@ -919,6 +919,7 @@
 <script src="../golfy/assets/js/plugins/magnific-popup.js"></script>
 
 <script src="assets/js/plugins/contact.form.js"></script>
+<script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
 
 <script src="assets/js/main.js"></script>
 
