--- a/about.html
+++ b/about.html
@@ -920,6 +920,7 @@
 
 <script src="assets/js/plugins/contact.form.js"></script>
 <script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
+<script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
 
 <script src="assets/js/main.js"></script>
 
