--- a/about.html
+++ b/about.html
@@ -709,7 +709,7 @@
 <script src="assets/js/plugins/metismenu.js"></script>
 <script src="assets/js/plugins/swiper.js"></script>
 <script src="assets/js/plugins/aos.js"></script>
-<script src="assets/js/plugins/nice-select.js"></script>
+<script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
 <script src="assets/js/plugins/smooth-scroll.js"></script>
 <script src="assets/js/vendor/waw.js"></script>
 
