--- a/careers.html
+++ b/careers.html
@@ -75,7 +75,7 @@
 
             <li class="main-nav"><a href="about.html">Our Company</a></li>
             <li class="main-nav has-dropdown mega-menu">
-                <a href="">Service</a>
+                <a href="#">Service</a>
                 <div class="rts-mega-menu service-mega-menu-style">
                     <div class="wrapper">
                         <div class="container">
