--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
 
             <li class="main-nav"><a href="about.html">Our Company</a></li>
             <li class="main-nav has-dropdown mega-menu">
-                <a href="">Service</a>
+                <a href="#">Service</a>
                 <div class="rts-mega-menu service-mega-menu-style">
                     <div class="wrapper">
                         <div class="container">
@@ -271,7 +271,6 @@
             <li class="main-nav"><a href="blog-grid.html">News & Insights</a></li>
             <li class="main-nav"><a href="careers.html">Careers</a></li>
 
-        <li class="main-nav"><a href="contact.html">Contact</a></li>
     </ul>
 </div>
                             <!-- nav-area end -->
