--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             <li class="main-nav"><a href="about.html">Our Company</a></li>
             <li class="main-nav has-dropdown mega-menu">
-                <a href="">Services</a>
+                <a href="#">Service</a>
                 <div class="rts-mega-menu service-mega-menu-style">
                     <div class="wrapper">
                         <div class="container">
