Add missing Magnific Popup script

--- a/blog-grid.html
+++ b/blog-grid.html
@@ -703,6 +703,7 @@
 
 <!-- scripts -->
 <script src="assets/js/plugins/jquery.js"></script>
+<script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
 <script src="assets/js/vendor/bootstrap.min.js"></script>
 
 <script src="assets/js/plugins/odometer.js"></script>
