--- a/index.html
+++ b/index.html
@@ -810,6 +810,7 @@
 
 <!-- scripts -->
 <script src="assets/js/plugins/jquery.js"></script>
+<script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
 <script src="assets/js/vendor/bootstrap.min.js"></script>
 
 <script src="assets/js/plugins/odometer.js"></script>
@@ -818,6 +819,7 @@
 <script src="assets/js/plugins/metismenu.js"></script>
 <script src="assets/js/plugins/swiper.js"></script>
 <script src="assets/js/plugins/aos.js"></script>
+<script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
 <script src="assets/js/plugins/nice-select.js"></script>
 <script src="assets/js/plugins/smooth-scroll.js"></script>
 <script src="assets/js/vendor/waw.js"></script>
