Add missing Magnific Popup script

--- a/index.html
+++ b/index.html
@@ -820,6 +820,7 @@
 <script src="assets/js/plugins/aos.js"></script>
 <script src="assets/js/plugins/nice-select.js"></script>
 <script src="assets/js/plugins/smooth-scroll.js"></script>
+<script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
 <script src="assets/js/vendor/waw.js"></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuSiPhoDaOJ7aqtJVtQhYhLzwwJ7rQlmA"></script>
