--- a/about.html
+++ b/about.html
@@ -194,41 +194,84 @@
                 <div class="mobile-menu d-block d-xl-none">
                     <nav class="nav-main mainmenu-nav mt--30">
                         <ul class="mainmenu metismenu" id="mobile-menu-active">
-                            <li>
-                                <a href="about.html" class="main">Our Company</a>
+                            <li class="has-droupdown">
+                                <a href="index.html#" class="main">Home</a>
+                                <ul class="submenu mm-collapse">
+                                    <li><a href="index.html">Demo Construction</a></li>
+                                    <li><a href="index-two.html">Demo Construction</a></li>
+                                    <li><a href="index-three.html">Demo Renovation</a></li>
+                                    <li><a href="index-four.html">Demo Building</a></li>
+                                    <li><a href="index-five.html">Demo Interior</a></li>
+                                </ul>
+                            </li>
+
+                            <li class="has-droupdown">
+                                <a href="service.html" class="main">Services</a>
+                                <ul class="submenu mm-collapse">
+                                    <li><a class="mobile-menu-link" href="service.html">Our Services</a></li>
+                                    <li><a class="mobile-menu-link" href="service-single.html">Service Single</a></li>
+                                    <li><a class="mobile-menu-link" href="service-single-two.html">Service Single 2</a></li>
+                                    <li><a class="mobile-menu-link" href="service-single-three.html">Service Single 3</a></li>
+                                    <li><a class="mobile-menu-link" href="service-single-four.html">Service Single 4</a></li>
+                                    <li><a class="mobile-menu-link" href="service-single-five.html">Service Single 5</a></li>
+                                </ul>
                             </li>
                             <li class="has-droupdown">
-                                <a href="#" class="main">Service</a>
+                                <a href="index.html#" class="main">Projects</a>
                                 <ul class="submenu mm-collapse">
                                     <li class="has-droupdown third-lvl">
-                                        <a class="main" href="#">Our Approach</a>
+                                        <a class="main" href="index.html#">Types</a>
                                         <ul class="submenu-third-lvl mm-collapse">
-                                            <li><a href="Preconstruction.html">Preconstruction</a></li>
-                                            <li><a href="Construction-management.html">Construction Management</a></li>
-                                            <li><a href="Project-management.html">Project Management</a></li>
+                                            <li><a href="project.html"></a>Project</li>
+                                            <li><a href="project-slider.html"></a>Project Slider</li>
+                                            <li><a href="project-slider-2.html"></a>Project Slider 2</li>
+                                            <li><a href="project-slider-3.html"></a>Project Slider 3</li>
+                                            <li><a href="project-list.html"></a>Project List</li>
+                                            <li><a href="project-card.html"></a>Project Card</li>
                                         </ul>
                                     </li>
                                     <li class="has-droupdown third-lvl">
-                                        <a class="main" href="#">Expertise</a>
+                                        <a class="main" href="index.html#">Layouts</a>
                                         <ul class="submenu-third-lvl mm-collapse">
-                                            <li><a href="Custom-home-renovations.html">Custom Home Renovations</a></li>
-                                            <li><a href="Custom-pools-spas.html">Custom Pools & Spas</a></li>
-                                            <li><a href="Outdoor-living.html">Outdoor Living Spaces</a></li>
-                                            <li><a href="Concrete-masonry.html">Concrete & Masonry</a></li>
-                                            <li><a href="Roofing-exterior-upgrades.html">Roofing & Exterior Upgrades</a></li>
-                                            <li><a href="Project-management-permitting.html">Project Management & Permitting</a></li>
+                                            <li><a href="project-two-column.html"></a>Project 2 Columns</li>
+                                            <li><a href="project-three-column.html"></a>Project 3 Columns</li>
+                                            <li><a href="project-two-column-wide.html"></a>Project 2 Columns Wide</li>
+                                            <li><a href="project-three-column-wide.html"></a>Project 3 Columns Wide</li>
+                                            <li><a href="project-four-column.html"></a>Project 4 Columns </li>
+                                            <li><a href="project-four-column-wide.html"></a>Project 4 Columns Wide </li>
+                                        </ul>
+                                    </li>
+                                    <li class="has-droupdown third-lvl">
+                                        <a class="main" href="index.html#">Hover Type</a>
+                                        <ul class="submenu-third-lvl mm-collapse">
+                                            <li><a href="project-hide-content-col-3.html"></a>Project Hide Content</li>
+                                            <li><a href="project-hide-content.html"></a>Project Hide Content wide</li>
+                                            <li><a href="project-card-hover.html"></a>Project Card Hover</li>
+                                            <li><a href="project-zoom-slider.html"></a>Project Slider Image Zoom</li>
+                                            <li><a href="project-hide-show.html"></a>Project Hide Show</li>
+                                            <li><a href="project-slider-hover.html"></a>Project Slider Hover</li>
+                                        </ul>
+                                    </li>
+                                    <li class="has-droupdown third-lvl">
+                                        <a class="main" href="index.html#">Singles</a>
+                                        <ul class="submenu-third-lvl mm-collapse">
+                                            <li><a href="project-details.html"></a>Project Detials</li>
+                                            <li><a href="project-details-2.html"></a>Project Detials Video</li>
+                                            <li><a href="project-details-3.html"></a>Project Detials Slider</li>
+                                            <li><a href="project-details-large-image.html"></a>Large Image</li>
+                                            <li><a href="project-details-gallery.html"></a>Project Gallery</li>
                                         </ul>
                                     </li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="project.html" class="main">Projects</a>
-                            </li>
-                            <li>
-                                <a href="blog-grid.html" class="main">News & Insights</a>
-                            </li>
-                            <li>
-                                <a href="careers.html" class="main">Careers</a>
+
+                            <li class="has-droupdown">
+                                <a href="index.html#" class="main">News & Insights</a>
+                                <ul class="submenu mm-collapse">
+                                    <li><a href="blog-grid.html">News Grid</a></li>
+                                    <li><a href="blog-list.html">News List</a></li>
+                                    <li><a href="blog-details.html">News Details</a></li>
+                                </ul>
                             </li>
                             <li>
                                 <a href="contact.html" class="main">Contact Us</a>
