Create job description page with application form

--- a/careers.html
+++ b/careers.html
@@ -489,7 +489,7 @@
                             <strong>Location:</strong>
                             London, UK
                         </div>
-                        <a href="careers.html#apply-here" class="rts-btn btn-primary">Apply Now</a>
+                        <a href="job-description.html?position=Project Manager&location=London, UK&posted=3 days ago" class="rts-btn btn-primary">Apply Now</a>
                     </div>
                     <!-- single fun facts end -->
                 </div>
@@ -508,7 +508,7 @@
                             <strong>Location:</strong>
                             London, UK
                         </div>
-                        <a href="careers.html#apply-here" class="rts-btn btn-primary">Apply Now</a>
+                        <a href="job-description.html?position=Civil Engineer&location=London, UK&posted=1 week ago" class="rts-btn btn-primary">Apply Now</a>
                     </div>
                     <!-- single fun facts end -->
                 </div>
@@ -527,7 +527,7 @@
                             <strong>Location:</strong>
                             London, UK
                         </div>
-                        <a href="careers.html#apply-here" class="rts-btn btn-primary">Apply Now</a>
+                        <a href="job-description.html?position=Executive Officer&location=London, UK&posted=5 days ago" class="rts-btn btn-primary">Apply Now</a>
                     </div>
                     <!-- single fun facts end -->
                 </div>
@@ -546,7 +546,7 @@
                             <strong>Location:</strong>
                             London, UK
                         </div>
-                        <a href="careers.html#apply-here" class="rts-btn btn-primary">Apply Now</a>
+                        <a href="job-description.html?position=Project Engineer&location=London, UK&posted=1 week ago" class="rts-btn btn-primary">Apply Now</a>
                     </div>
                     <!-- single fun facts end -->
                 </div>
@@ -565,7 +565,7 @@
                             <strong>Location:</strong>
                             London, UK
                         </div>
-                        <a href="careers.html#apply-here" class="rts-btn btn-primary">Apply Now</a>
+                        <a href="job-description.html?position=Junior Engineer&location=London, UK&posted=4 days ago" class="rts-btn btn-primary">Apply Now</a>
                     </div>
                     <!-- single fun facts end -->
                 </div>
