--- a/careers.html
+++ b/careers.html
@@ -838,6 +838,7 @@
 <script src="assets/js/vendor/info-box.js"></script>
 <script src="assets/js/plugins/contact.form.js"></script>
 
+<script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 
