--- a/Project-management.html
+++ b/Project-management.html
@@ -57,8 +57,6 @@
                                     <span>Follow Us On:</span>
                                     <ul>
                                         <li><a href="index.html#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                        <li><a href="index.html#"><i class="fa-brands fa-twitter"></i></a></li>
-                                        <li><a href="index.html#"><i class="fa-brands fa-whatsapp"></i></a></li>
                                         <li><a href="index.html#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                                     </ul>
                                 </div>
@@ -317,12 +315,11 @@
                     <div class="breadcrumb-area-inner">
                         <span class="water-text">Details</span>
                         <h1 class="title">
-                            The process of construction involves a diverse
-                            activities.
+                            Project Management
                         </h1>
                         <div class="nav-area-navigation">
                             <a href="index.html#">home</a>
-                            <a class="current" href="index.html#">Service Details</a>
+                            <a class="current" href="index.html#">Our Approach</a>
                         </div>
                     </div>
                 </div>
@@ -340,41 +337,29 @@
                         <img src="assets/images/service/17.webp" alt="service">
                     </div>
                     <div class="service-details-inner-area-wrapper">
-                        <h4 class="title">Description Of The Service</h4>
+                        <h4 class="title">How We Manage Projects</h4>
                         <p class="disc">
-                            Building a custom home is a dream for many, and at Elever, we believe that the journey to
-                            achieving that dream should be as inspiring as the end result. Our Custom Home Building
-                            service is designed with you in mind, combining expert craftsmanship, the highest-quality
-                            materials, and a commitment to excellence in every phase of construction. From the initial
-                            concept discussions to the final touches, our dedicated team is here to guide you through
-                            the process, ensuring your new home is a reflection of your vision, lifestyle, and unique
-                            personality.
-
+                            Successful project management requires strategic planning, meticulous execution, and continuous oversight. At Takes Two Construction, our project management services ensure that every aspect of your construction project is carefully planned, efficiently executed, and delivered to your complete satisfaction.
                         </p>
                         <p class="disc">
-                            The journey to a custom home begins with understanding. We start each project with an
-                            initial consultation to learn about your goals, ideas, and preferences. During this stage,
-                            we take the time to listen carefully to your vision. Are you seeking a sprawling estate with
-                            traditional details, or perhaps a modern, minimalist design that emphasizes open spaces and
-                            natural light? We discuss every aspect, from the overall structure to the small details that
-                            make a house truly feel like home.
+                            Our project management methodology combines industry best practices with innovative technology solutions to deliver superior results. We focus on clear communication, proactive problem-solving, and continuous improvement to exceed client expectations while maintaining the highest standards of quality and safety.
                         </p>
                         <div class="service-main-wrapper-tabs">
                             <ul class="nav nav-tabs" id="myTab" role="tablist">
                                 <li class="nav-item" role="presentation">
                                     <button class="nav-link active" id="home-tab" data-bs-toggle="tab"
                                         data-bs-target="#home" type="button" role="tab" aria-controls="home"
-                                        aria-selected="true">What’s Included:</button>
+                                        aria-selected="true">Our Project Management Services</button>
                                 </li>
                                 <li class="nav-item" role="presentation">
                                     <button class="nav-link" id="profile-tab" data-bs-toggle="tab"
                                         data-bs-target="#profile" type="button" role="tab" aria-controls="profile"
-                                        aria-selected="false">No Compromises on Quality</button>
+                                        aria-selected="false">Project Management Excellence</button>
                                 </li>
                                 <li class="nav-item" role="presentation">
                                     <button class="nav-link" id="contact-tab" data-bs-toggle="tab"
                                         data-bs-target="#contact" type="button" role="tab" aria-controls="contact"
-                                        aria-selected="false">Customized Solutions</button>
+                                        aria-selected="false">Our PM Methodology</button>
                                 </li>
                             </ul>
                             <div class="tab-content" id="myTabContent">
@@ -386,12 +371,7 @@
                                                 <i class="fa-solid fa-check"></i>
                                             </div>
                                             <div class="inner-content">
-                                                <b>Personalized Design Consultation:</b> Our team of architects and
-                                                designers
-                                                collaborate with you to conceptualize a layout that suits your
-                                                preferences,
-                                                lifestyle, and budget. From layout to finishing touches, every detail is
-                                                customized.
+                                                <b>Strategic Project Planning:</b> We develop comprehensive project plans that define scope, objectives, deliverables, timelines, and resource requirements to ensure successful project outcomes.
                                             </div>
                                         </div>
                                         <div class="single">
@@ -399,10 +379,7 @@
                                                 <i class="fa-solid fa-check"></i>
                                             </div>
                                             <div class="inner-content">
-                                                <b>High-Quality Materials & Craftsmanship:</b> We prioritize quality in
-                                                every aspect of your home. With carefully sourced materials and skilled
-                                                professionals, we ensure that each element, from foundation to
-                                                finishing, meets our high standards.
+                                                <b>Risk Management:</b> We identify potential project risks early and develop mitigation strategies to minimize impact on schedule, budget, and quality deliverables.
                                             </div>
                                         </div>
                                         <div class="single">
@@ -410,9 +387,23 @@
                                                 <i class="fa-solid fa-check"></i>
                                             </div>
                                             <div class="inner-content">
-                                                <b>Project Management & Updates:</b> We take the stress out of building
-                                                with a dedicated project manager, providing regular updates and
-                                                transparent timelines so you’re informed at every stage.
+                                                <b>Stakeholder Communication:</b> Regular updates, progress reports, and stakeholder meetings ensure all parties remain informed and aligned throughout the project lifecycle.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Resource Optimization:</b> Efficient allocation and management of human resources, materials, and equipment to maximize productivity and minimize waste.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Quality Assurance:</b> Systematic quality control processes and regular inspections ensure deliverables meet or exceed established standards and specifications.
                                             </div>
                                         </div>
                                     </div>
@@ -425,12 +416,7 @@
                                                 <i class="fa-solid fa-check"></i>
                                             </div>
                                             <div class="inner-content">
-                                                <b>Personalized Design Consultation:</b> Our team of architects and
-                                                designers
-                                                collaborate with you to conceptualize a layout that suits your
-                                                preferences,
-                                                lifestyle, and budget. From layout to finishing touches, every detail is
-                                                customized.
+                                                <b>Integrated Project Delivery:</b> Our approach integrates all project phases from design through construction, ensuring seamless coordination and optimal outcomes.
                                             </div>
                                         </div>
                                         <div class="single">
@@ -438,10 +424,7 @@
                                                 <i class="fa-solid fa-check"></i>
                                             </div>
                                             <div class="inner-content">
-                                                <b>High-Quality Materials & Craftsmanship:</b> We prioritize quality in
-                                                every aspect of your home. With carefully sourced materials and skilled
-                                                professionals, we ensure that each element, from foundation to
-                                                finishing, meets our high standards.
+                                                <b>Advanced Technology:</b> We leverage cutting-edge project management tools, Building Information Modeling (BIM), and digital collaboration platforms for enhanced efficiency.
                                             </div>
                                         </div>
                                         <div class="single">
@@ -449,9 +432,15 @@
                                                 <i class="fa-solid fa-check"></i>
                                             </div>
                                             <div class="inner-content">
-                                                <b>Project Management & Updates:</b> We take the stress out of building
-                                                with a dedicated project manager, providing regular updates and
-                                                transparent timelines so you’re informed at every stage.
+                                                <b>Continuous Improvement:</b> We implement lessons learned and best practices from each project to continuously enhance our project management capabilities and client satisfaction.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Performance Monitoring:</b> Regular performance metrics tracking and reporting ensure projects stay aligned with established goals and client expectations.
                                             </div>
                                         </div>
                                     </div>
@@ -490,7 +479,7 @@
                                             <div class="inner-content">
                                                 <b>Project Management & Updates:</b> We take the stress out of building
                                                 with a dedicated project manager, providing regular updates and
-                                                transparent timelines so you’re informed at every stage.
+                                                transparent timelines so you're informed at every stage.
                                             </div>
                                         </div>
                                     </div>
@@ -510,11 +499,9 @@
                 <div class="col-lg-12">
                     <div class="call-to-action-area-service bg_image">
                         <div class="inner">
-                            <h3 class="title">Ready to work together</h3>
+                            <h3 class="title">Professional Project Management</h3>
                             <p class="disc">
-                                Whether you have a project in mind and you’re looking for a reliable construction
-                                partner or you’re looking to take the next step in your career, we want to hear from
-                                you!
+                                Experience the difference that professional project management makes. Our systematic approach ensures your construction project is delivered successfully, on time, and within budget.
                             </p>
                             <a href="index.html#" class="rts-btn btn-primary">Make An Appointment</a>
                         </div>
@@ -548,8 +535,8 @@
                         <div class="title-wrapper-left mb--50">
                             <span class="pre">How We Works</span>
                             <h2 class="title">
-                                How To Work With Elever <br>
-                                Construction Builder
+                                How TTC Project <br>
+                                Management Works
                             </h2>
                         </div>
                         <div class="single-choose-us-one">
@@ -559,8 +546,7 @@
                             </div>
                             <div class="info-wrapper">
                                 <h5 class="title">Consultation & Planning</h5>
-                                <p class="disc">We begin with a thorough consultation to understand your vision, budget,
-                                    and project goals. Our team works with you to develop a tailored plan</p>
+                                <p class="disc">We conduct comprehensive project assessment, define clear objectives, establish success criteria, and develop detailed project management plans with stakeholder input.</p>
                             </div>
                         </div>
                         <div class="single-choose-us-one">
@@ -570,8 +556,7 @@
                             </div>
                             <div class="info-wrapper">
                                 <h5 class="title">Design & Pre-Construction</h5>
-                                <p class="disc">We begin with a thorough consultation to understand your vision, budget,
-                                    and project goals. Our team works with you to develop a tailored plan</p>
+                                <p class="disc">We coordinate design development, permit processes, contractor selection, and pre-construction activities while maintaining strict quality and timeline controls.</p>
                             </div>
                         </div>
                         <div class="single-choose-us-one">
@@ -581,8 +566,7 @@
                             </div>
                             <div class="info-wrapper">
                                 <h5 class="title">Construction & Delivery</h5>
-                                <p class="disc">We begin with a thorough consultation to understand your vision, budget,
-                                    and project goals. Our team works with you to develop a tailored plan</p>
+                                <p class="disc">We provide continuous oversight, progress monitoring, quality assurance, and stakeholder communication to ensure successful project completion and client satisfaction.</p>
                             </div>
                         </div>
                     </div>
@@ -664,8 +648,6 @@
                     <div class="social-area-wrapper-one">
                         <ul>
                             <li><a href="index.html#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                            <li><a href="index.html#"><i class="fa-brands fa-twitter"></i></a></li>
-                            <li><a href="index.html#"><i class="fa-brands fa-youtube"></i></a></li>
                             <li><a href="index.html#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
                     </div>
