--- a/contact.html
+++ b/contact.html
@@ -57,8 +57,6 @@
                                     <span>Follow Us On:</span>
                                     <ul>
                                         <li><a href="contact.html#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                        <li><a href="contact.html#"><i class="fa-brands fa-twitter"></i></a></li>
-                                        <li><a href="contact.html#"><i class="fa-brands fa-whatsapp"></i></a></li>
                                         <li><a href="contact.html#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                                     </ul>
                                 </div>
@@ -195,8 +193,6 @@
                                     <span>Follow Us On:</span>
                                     <ul>
                                         <li><a href="contact.html#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                        <li><a href="contact.html#"><i class="fa-brands fa-twitter"></i></a></li>
-                                        <li><a href="contact.html#"><i class="fa-brands fa-whatsapp"></i></a></li>
                                         <li><a href="contact.html#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                                     </ul>
                                 </div>
@@ -457,16 +453,6 @@
                 </li>
                 <li>
                     <a href="contact.html#">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="contact.html#">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="contact.html#">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </a>
                 </li>
@@ -542,7 +528,7 @@
                 <div class="col-lg-6">
                     <div id="form-messages"></div>
                     <form id="contact-form" action="https://html.themewant.com/elever/mailer.php" class="contact-form-area-wrapper">
-                        <h4 class="title">Let’s Get in Touch</h4>
+                        <h4 class="title">Let's Get in Touch</h4>
                         <div class="half-inpur-wrapper">
                             <div class="single">
                                 <input type="text" name="name" placeholder="Your Name">
@@ -651,14 +637,12 @@
                         <img src="assets/images/logo/01.svg" alt="logo">
                     </a>
                     <p class="disc">
-                        we’re committed to elevating the construction experience for our clients. With a passion for
+                        we're committed to elevating the construction experience for our clients. With a passion for
                         innovation and quality craftsmanship,
                     </p>
                     <div class="social-area-wrapper-one">
                         <ul>
                             <li><a href="contact.html#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                            <li><a href="contact.html#"><i class="fa-brands fa-twitter"></i></a></li>
-                            <li><a href="contact.html#"><i class="fa-brands fa-youtube"></i></a></li>
                             <li><a href="contact.html#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
                     </div>
