--- a/Preconstruction.html
+++ b/Preconstruction.html
@@ -57,8 +57,6 @@
                                     <span>Follow Us On:</span>
                                     <ul>
                                         <li><a href="index.html#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                        <li><a href="index.html#"><i class="fa-brands fa-twitter"></i></a></li>
-                                        <li><a href="index.html#"><i class="fa-brands fa-whatsapp"></i></a></li>
                                         <li><a href="index.html#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                                     </ul>
                                 </div>
@@ -289,16 +287,6 @@
                             </li>
                             <li>
                                 <a href="index.html#">
-                                    <i class="fa-brands fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <i class="fa-brands fa-youtube"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
                                     <i class="fa-brands fa-linkedin-in"></i>
                                 </a>
                             </li>
@@ -444,8 +432,8 @@
                         <div class="inner">
                             <h3 class="title">Ready to work together</h3>
                             <p class="disc">
-                                Whether you have a project in mind and you’re looking for a reliable construction
-                                partner or you’re looking to take the next step in your career, we want to hear from
+                                Whether you have a project in mind and you're looking for a reliable construction
+                                partner or you're looking to take the next step in your career, we want to hear from
                                 you!
                             </p>
                             <a href="index.html#" class="rts-btn btn-primary">Make An Appointment</a>
@@ -529,8 +517,6 @@
                     <div class="social-area-wrapper-one">
                         <ul>
                             <li><a href="index.html#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                            <li><a href="index.html#"><i class="fa-brands fa-twitter"></i></a></li>
-                            <li><a href="index.html#"><i class="fa-brands fa-youtube"></i></a></li>
                             <li><a href="index.html#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
                     </div>
